cmake_minimum_required(VERSION 3.12)
project(RoboCatAction)

set(CMAKE_CXX_STANDARD 14)

include_directories(RoboCat/Inc)
include_directories(RoboCatClient/Inc)
include_directories(RoboCatServer/Inc)
include_directories(SDL/include)

add_executable(RoboCatAction
        "Assets/8-BIT WONDER.TTF"
        Assets/8-BITWONDER-README.TXT
        Assets/Art-README.txt
        Assets/Carlito-Regular-README.TXT
        Assets/Carlito-Regular.ttf
        Assets/cat.png
        Assets/mouse.png
        Assets/yarn.png
        RoboCat/Inc/Engine.h
        RoboCat/Inc/GameObject.h
        RoboCat/Inc/GameObjectRegistry.h
        RoboCat/Inc/InputAction.h
        RoboCat/Inc/InputState.h
        RoboCat/Inc/MemoryBitStream.h
        RoboCat/Inc/Mouse.h
        RoboCat/Inc/Move.h
        RoboCat/Inc/MoveList.h
        RoboCat/Inc/NetworkManager.h
        RoboCat/Inc/ReplicationCommand.h
        RoboCat/Inc/RoboCat.h
        RoboCat/Inc/RoboCatPCH.h
        RoboCat/Inc/RoboCatShared.h
        RoboCat/Inc/RoboMath.h
        RoboCat/Inc/ScoreBoardManager.h
        RoboCat/Inc/SocketAddress.h
        RoboCat/Inc/SocketAddressFactory.h
        RoboCat/Inc/SocketUtil.h
        RoboCat/Inc/StringUtils.h
        RoboCat/Inc/TCPSocket.h
        RoboCat/Inc/Timing.h
        RoboCat/Inc/UDPSocket.h
        RoboCat/Inc/WeightedTimedMovingAverage.h
        RoboCat/Inc/World.h
        RoboCat/Inc/Yarn.h
        RoboCat/Src/Engine.cpp
        RoboCat/Src/GameObject.cpp
        RoboCat/Src/GameObjectRegistry.cpp
        RoboCat/Src/InputState.cpp
        RoboCat/Src/MemoryBitStream.cpp
        RoboCat/Src/Mouse.cpp
        RoboCat/Src/Move.cpp
        RoboCat/Src/MoveList.cpp
        RoboCat/Src/NetworkManager.cpp
        RoboCat/Src/RoboCat.cpp
        RoboCat/Src/RoboCatPCH.cpp
        RoboCat/Src/RoboMath.cpp
        RoboCat/Src/ScoreBoardManager.cpp
        RoboCat/Src/SocketAddress.cpp
        RoboCat/Src/SocketAddressFactory.cpp
        RoboCat/Src/SocketUtil.cpp
        RoboCat/Src/StringUtils.cpp
        RoboCat/Src/TCPSocket.cpp
        RoboCat/Src/Timing.cpp
        RoboCat/Src/UDPSocket.cpp
        RoboCat/Src/World.cpp
        RoboCat/Src/Yarn.cpp
        RoboCat/RoboCat.vcxproj
        RoboCat/RoboCat.vcxproj.filters
        RoboCatAction.xcodeproj/project.xcworkspace/xcuserdata/josh.xcuserdatad/UserInterfaceState.xcuserstate
        RoboCatAction.xcodeproj/project.xcworkspace/contents.xcworkspacedata
        RoboCatAction.xcodeproj/xcshareddata/xcschemes/RoboCatActionServer.xcscheme
        RoboCatAction.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/RoboCatActionClient.xcscheme
        RoboCatAction.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/xcschememanagement.plist
        RoboCatAction.xcodeproj/project.pbxproj
        RoboCatClient/Inc/Client.h
        RoboCatClient/Inc/GraphicsDriver.h
        RoboCatClient/Inc/HUD.h
        RoboCatClient/Inc/InputManager.h
        RoboCatClient/Inc/MouseClient.h
        RoboCatClient/Inc/NetworkManagerClient.h
        RoboCatClient/Inc/RenderManager.h
        RoboCatClient/Inc/ReplicationManagerClient.h
        RoboCatClient/Inc/RoboCatClient.h
        RoboCatClient/Inc/RoboCatClientPCH.h
        RoboCatClient/Inc/SpriteComponent.h
        RoboCatClient/Inc/Texture.h
        RoboCatClient/Inc/TextureManager.h
        RoboCatClient/Inc/WindowManager.h
        RoboCatClient/Inc/YarnClient.h
        RoboCatClient/Src/Client.cpp
        RoboCatClient/Src/ClientMain.cpp
        RoboCatClient/Src/GraphicsDriver.cpp
        RoboCatClient/Src/HUD.cpp
        RoboCatClient/Src/InputManager.cpp
        RoboCatClient/Src/MouseClient.cpp
        RoboCatClient/Src/NetworkManagerClient.cpp
        RoboCatClient/Src/RenderManager.cpp
        RoboCatClient/Src/ReplicationManagerClient.cpp
        RoboCatClient/Src/RoboCatClient.cpp
        RoboCatClient/Src/RoboCatClientPCH.cpp
        RoboCatClient/Src/SpriteComponent.cpp
        RoboCatClient/Src/Texture.cpp
        RoboCatClient/Src/TextureManager.cpp
        RoboCatClient/Src/WindowManager.cpp
        RoboCatClient/Src/YarnClient.cpp
        RoboCatClient/RoboCatClient.vcxproj
        RoboCatClient/RoboCatClient.vcxproj.filters
        RoboCatServer/Inc/ClientProxy.h
        RoboCatServer/Inc/MouseServer.h
        RoboCatServer/Inc/NetworkManagerServer.h
        RoboCatServer/Inc/ReplicationManagerServer.h
        RoboCatServer/Inc/RoboCatServer.h
        RoboCatServer/Inc/RoboCatServerPCH.h
        RoboCatServer/Inc/Server.h
        RoboCatServer/Inc/YarnServer.h
        RoboCatServer/Src/ClientProxy.cpp
        RoboCatServer/Src/MouseServer.cpp
        RoboCatServer/Src/NetworkManagerServer.cpp
        RoboCatServer/Src/ReplicationManagerServer.cpp
        RoboCatServer/Src/RoboCatServer.cpp
        RoboCatServer/Src/RoboCatServerPCH.cpp
        RoboCatServer/Src/Server.cpp
        RoboCatServer/Src/ServerMain.cpp
        RoboCatServer/Src/YarnServer.cpp
        RoboCatServer/RoboCatServer.vcxproj
        RoboCatServer/RoboCatServer.vcxproj.filters
        SDL/include/begin_code.h
        SDL/include/close_code.h
        SDL/include/SDL.h
        SDL/include/SDL_assert.h
        SDL/include/SDL_atomic.h
        SDL/include/SDL_audio.h
        SDL/include/SDL_bits.h
        SDL/include/SDL_blendmode.h
        SDL/include/SDL_clipboard.h
        SDL/include/SDL_config.h
        SDL/include/SDL_cpuinfo.h
        SDL/include/SDL_endian.h
        SDL/include/SDL_error.h
        SDL/include/SDL_events.h
        SDL/include/SDL_filesystem.h
        SDL/include/SDL_gamecontroller.h
        SDL/include/SDL_gesture.h
        SDL/include/SDL_haptic.h
        SDL/include/SDL_hints.h
        SDL/include/SDL_image.h
        SDL/include/SDL_joystick.h
        SDL/include/SDL_keyboard.h
        SDL/include/SDL_keycode.h
        SDL/include/SDL_loadso.h
        SDL/include/SDL_log.h
        SDL/include/SDL_main.h
        SDL/include/SDL_messagebox.h
        SDL/include/SDL_mixer.h
        SDL/include/SDL_mouse.h
        SDL/include/SDL_mutex.h
        SDL/include/SDL_name.h
        SDL/include/SDL_opengl.h
        SDL/include/SDL_opengles.h
        SDL/include/SDL_opengles2.h
        SDL/include/SDL_pixels.h
        SDL/include/SDL_platform.h
        SDL/include/SDL_power.h
        SDL/include/SDL_quit.h
        SDL/include/SDL_rect.h
        SDL/include/SDL_render.h
        SDL/include/SDL_revision.h
        SDL/include/SDL_rwops.h
        SDL/include/SDL_scancode.h
        SDL/include/SDL_shape.h
        SDL/include/SDL_stdinc.h
        SDL/include/SDL_surface.h
        SDL/include/SDL_system.h
        SDL/include/SDL_syswm.h
        SDL/include/SDL_test.h
        SDL/include/SDL_test_assert.h
        SDL/include/SDL_test_common.h
        SDL/include/SDL_test_compare.h
        SDL/include/SDL_test_crc32.h
        SDL/include/SDL_test_font.h
        SDL/include/SDL_test_fuzzer.h
        SDL/include/SDL_test_harness.h
        SDL/include/SDL_test_images.h
        SDL/include/SDL_test_log.h
        SDL/include/SDL_test_md5.h
        SDL/include/SDL_test_random.h
        SDL/include/SDL_thread.h
        SDL/include/SDL_timer.h
        SDL/include/SDL_touch.h
        SDL/include/SDL_ttf.h
        SDL/include/SDL_types.h
        SDL/include/SDL_version.h
        SDL/include/SDL_video.h
        SDL/lib/mac/libfreetype.6.dylib
        SDL/lib/mac/libpng16.16.dylib
        SDL/lib/mac/libSDL2-2.0.0.dylib
        SDL/lib/mac/libSDL2_image-2.0.0.dylib
        SDL/lib/mac/libSDL2_mixer-2.0.0.dylib
        SDL/lib/mac/libSDL2_ttf-2.0.0.dylib
        SDL/lib/win/x64/libfreetype-6.dll
        SDL/lib/win/x64/libogg-0.dll
        SDL/lib/win/x64/libpng16-16.dll
        SDL/lib/win/x64/libvorbis-0.dll
        SDL/lib/win/x64/libvorbisfile-3.dll
        SDL/lib/win/x64/LICENSE.freetype.txt
        SDL/lib/win/x64/LICENSE.ogg-vorbis.txt
        SDL/lib/win/x64/LICENSE.png.txt
        SDL/lib/win/x64/LICENSE.zlib.txt
        SDL/lib/win/x64/SDL2.dll
        SDL/lib/win/x64/SDL2.lib
        SDL/lib/win/x64/SDL2_image.dll
        SDL/lib/win/x64/SDL2_image.lib
        SDL/lib/win/x64/SDL2_mixer.dll
        SDL/lib/win/x64/SDL2_mixer.lib
        SDL/lib/win/x64/SDL2_ttf.dll
        SDL/lib/win/x64/SDL2_ttf.lib
        SDL/lib/win/x64/SDL2main.lib
        SDL/lib/win/x64/SDL2test.lib
        SDL/lib/win/x64/zlib1.dll
        SDL/lib/win/x86/libfreetype-6.dll
        SDL/lib/win/x86/libogg-0.dll
        SDL/lib/win/x86/libpng16-16.dll
        SDL/lib/win/x86/libvorbis-0.dll
        SDL/lib/win/x86/libvorbisfile-3.dll
        SDL/lib/win/x86/LICENSE.freetype.txt
        SDL/lib/win/x86/LICENSE.ogg-vorbis.txt
        SDL/lib/win/x86/LICENSE.png.txt
        SDL/lib/win/x86/LICENSE.zlib.txt
        SDL/lib/win/x86/SDL2.dll
        SDL/lib/win/x86/SDL2.lib
        SDL/lib/win/x86/SDL2_image.dll
        SDL/lib/win/x86/SDL2_image.lib
        SDL/lib/win/x86/SDL2_mixer.dll
        SDL/lib/win/x86/SDL2_mixer.lib
        SDL/lib/win/x86/SDL2_ttf.dll
        SDL/lib/win/x86/SDL2_ttf.lib
        SDL/lib/win/x86/SDL2main.lib
        SDL/lib/win/x86/SDL2test.lib
        SDL/lib/win/x86/zlib1.dll
        SDL/BUGS.txt
        SDL/COPYING.txt
        SDL/README-SDL.txt
        SDL/README.txt
        SDL/WhatsNew.txt
        RoboCat.sln)
